--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -11,6 +11,12 @@ services:
       - PHP_DISPLAY_ERRORS=1
       - PHP_DATE_TIMEZONE=Asia/Ho_Chi_Minh
       - WEB_DOCUMENT_ROOT=/app/public
+    labels:
+      - traefik.enable=true
+      - traefik.backend=career-bot
+      - traefik.frontend.rule=Host:dev.career-bot.quan.network
+      - traefik.docker.network=proxy
+      - traefik.port=80
 networks:
   proxy:
     external: true
